<resources>
    <string name="app_name">智慧医疗v2</string>
    <string name="privacy_protect_hint">我们会遵循隐私政策收集，使用信息，但不会强制捆绑；\n1、在仅浏览时，为保证账号登陆安全及信息安全，我们会收集设备信息与日志信息。
        \n2、地理位置信息、摄像头、麦克风、相册权限均需要经过授权才会为实现功能或服务时使用。
        \n3、未经您同意，我们不会从第三方处获取、共享或向其提供您的信息。
        \n您还可以查看完整版《慧健康用户服务协议》，请务必审核阅读、充分理解其中各条款。\n如您同意，请点击“同意”开始接受我们的服务</string>
    <string name="privacy_protect_disagree">不同意</string>
    <string name="privacy_protect_agree">同意</string>
    <string name="privacy_protect_warm_tips">用户协议</string>
    <string name="privacy_protect_warm_tip_privacy">隐私声明</string>
    <string name="tv_main_home_page">首页</string>
    <string name="tv_main_home_service">服务</string>
    <string name="tv_main_home_out_hospital">院外管理</string>
    <string name="tv_main_home_mall">商城</string>
    <string name="tv_main_home_my">我的</string>
    <string name="login_agreement">请阅读并同意慧健康《用户协议》及《隐私政策》</string>
    <string name="login_agreement_left">请阅读并同意慧健康</string>
    <string name="login_agreement_user_agreement">《用户协议》</string>
    <string name="login_agreement_user_and">及</string>
    <string name="login_agreement_privacy">《隐私政策》</string>

    <!--智能饮食-->

    <string name="diet_custom_programme_top_title">第一步：请选择分餐比例</string>
    <string name="diet_change_diet_top_title">选择我爱吃的食物</string>
    <string name="diet_activity_change_diet_top_title">更改饮食方案</string>
    <string name="diet_activity_custom_diet_top_title">自定义饮食方案</string>
    <string name="diet_change_diet_top_breakfast">早餐</string>
    <string name="diet_change_diet_top_lunch">午餐</string>
    <string name="diet_change_diet_top_dinner">晚餐</string>
    <string name="add_diet_plan">加餐方案</string>
    <string name="intelligence_run_work">步行</string>
    <string name="intelligence_run_run">跑步</string>
    <string name="intelligence_run_no">未消耗</string>
    <string name="intelligence_run_other">其他消耗</string>
    <string name="intelligence_run_three">&#12288;&#12288;&#12288;%1$s</string>
    <string name="intelligence_run_two">&#12288;&#12288;%1$s</string>
    <string name="intelligence_run_one">&#12288;%1$s</string>
    <string name="exercise_success_height">根据身高体重计算出您目前属于</string>
    <string name="exercise_success_height_num">%1$s</string>
    <string name="exercise_success_height_num_unit">。已经为您制定了运动计划。</string>
    <string name="exercise_success_height_num_all">，需要%1$s%2$s公斤,已经为您制定了%3$s计划。</string>
    <string name="intelligence_run_num_unit">千卡</string>
    <string name="education_intelligence_subject_num">还有%1$s节课未学完</string>


    <string name="user_center_age">年龄：%1$s岁</string>
    <string name="service_test_history_num">评测分数：%1$s</string>
    <string name="service_blood_data_tips_format">%1$s天内您一共检测%2$s次血糖值，其中空腹%3$s次，非空腹%4$s次。</string>
</resources>