<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_bg_white_10"
            android:orientation="vertical"
            android:paddingBottom="15dp">


            <TextView
                android:id="@+id/tv_diet_plan_breakfast"
                style="@style/diet_change_diet_meal_title"
                android:drawableLeft="@drawable/diet_bing_with_green"
                android:drawableRight="@drawable/diet_change_my_like"
                android:text="@string/diet_change_diet_top_breakfast" />

            <TextView style="@style/base_dotted_line" />

            <com.vice.bloodpressure.view.NoScrollListView
                android:id="@+id/rv_diet_plan_breakfast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:divider="@color/transparent"
                android:listSelector="@color/transparent" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_bg_white_10"
            android:orientation="vertical"
            android:paddingBottom="15dp">


            <TextView
                android:id="@+id/tv_diet_plan_lunch"
                style="@style/diet_change_diet_meal_title"
                android:drawableLeft="@drawable/jitui_with_green_20"
                android:drawableRight="@drawable/diet_change_my_like"
                android:text="@string/diet_change_diet_top_lunch" />

            <TextView style="@style/base_dotted_line" />

            <com.vice.bloodpressure.view.NoScrollListView
                android:id="@+id/rv_diet_plan_lunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:divider="@color/transparent"
                android:listSelector="@color/transparent" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_bg_white_10"
            android:orientation="vertical"
            android:paddingBottom="15dp">


            <TextView
                android:id="@+id/tv_diet_plan_dinner"
                style="@style/diet_change_diet_meal_title"
                android:drawableLeft="@drawable/diet_huacai_with_green"
                android:drawableRight="@drawable/diet_change_my_like"
                android:text="@string/diet_change_diet_top_dinner" />

            <TextView style="@style/base_dotted_line" />

            <com.vice.bloodpressure.view.NoScrollListView
                android:id="@+id/rv_diet_plan_dinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:divider="@color/transparent"
                android:listSelector="@color/transparent" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_bg_white_10"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:paddingRight="10dp"
            android:paddingBottom="15dp">

            <TextView
                style="@style/style_title_with_green_h"
                android:layout_marginBottom="15dp"
                android:text="@string/add_diet_plan" />

            <TextView
                style="@style/base_dotted_line"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp" />

            <TextView
                android:id="@+id/tv_diet_plan_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="1. 当空腹血糖控制在7.0mmol/L(126mg/dl)以
下，餐后2小时血糖小于10mmol/L(180mg/dl)糖化血红蛋白小于7.5%，且血糖没有较大波动时，就可以选择水果，但需代替部分主食。\n\n

2. 食用最好在两餐之间，病情控制不满意者暂不食用，可吃少量生黄瓜和生西红柿。\n\n

3. 进食水果要减少主食的摄入量，少食25克的主食可换苹果、橘子、桃子150克，梨100克、西瓜500克等。\n\n

4. 葡萄干、桂圆、枣、板栗等含糖量较高，应少食用。" />
        </LinearLayout>


    </LinearLayout>


</ScrollView>