<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:background="@drawable/bg_white_10"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:drawableLeft="@drawable/shape_green_4_17"
                android:drawablePadding="10dp"
                android:text="@string/diet_change_diet_top_title"
                android:textColor="@color/base_black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_background_10"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_diet_change_breakfast"
                    android:text="@string/diet_change_diet_top_breakfast"
                    android:drawableRight="@drawable/arrow_right_gray"
                    style="@style/diet_change_diet_meal_title" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/diet_dotte_line" />

                <com.vice.bloodpressure.view.NoScrollListView
                    android:id="@+id/nlv_diet_change_breakfast"
                    style="@style/diet_change_diet_meal_list">

                </com.vice.bloodpressure.view.NoScrollListView>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_background_10"
                android:orientation="vertical"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/tv_diet_change_noon"
                    style="@style/diet_change_diet_meal_title"
                    android:drawableRight="@drawable/arrow_right_gray"
                    android:text="@string/diet_change_diet_top_noon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/diet_dotte_line" />

                <com.vice.bloodpressure.view.NoScrollListView
                    android:id="@+id/nlv_diet_change_noon"
                    style="@style/diet_change_diet_meal_list">

                </com.vice.bloodpressure.view.NoScrollListView>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_background_10"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_diet_change_dinner"
                    style="@style/diet_change_diet_meal_title"
                    android:drawableRight="@drawable/arrow_right_gray"
                    android:text="@string/diet_change_diet_top_dinner" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/diet_dotte_line" />

                <com.vice.bloodpressure.view.NoScrollListView
                    android:id="@+id/nlv_diet_change_dinner"
                    style="@style/diet_change_diet_meal_list">

                </com.vice.bloodpressure.view.NoScrollListView>


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</ScrollView>