<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="55dp"
        android:orientation="vertical"
        android:paddingBottom="15dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:overScrollMode="never"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/shape_bg_white_10"
                    android:orientation="vertical">

                    <TextView
                        style="@style/style_title_with_green_h"
                        android:layout_margin="10dp"
                        android:text="@string/diet_custom_programme_top_title" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:text="糖尿病患者应该均衡营养摄入，三大营养素蛋白质、脂肪和碳水化合物所占的比例推荐如下："
                        android:textColor="@color/gray_8a"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:text="选择饮食比例 :"
                        android:textColor="@color/black_2A"
                        android:textSize="16sp" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:padding="15dp">

                        <RadioButton
                            android:id="@+id/rb_diet_programme_choose_one"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/transparent"
                            android:button="@drawable/selector_circle_right_check"
                            android:checked="true"
                            android:padding="5dp"
                            android:text="早餐1/5；午餐2/5；晚餐2/5；"
                            android:textColor="@color/gray_8a"
                            android:textSize="15sp" />

                        <RadioButton
                            android:id="@+id/rb_diet_programme_choose_two"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/transparent"
                            android:button="@drawable/selector_circle_right_check"
                            android:checked="false"
                            android:padding="5dp"
                            android:text="早餐1/3；午餐1/3；晚餐1/3；"
                            android:textColor="@color/gray_8a"
                            android:textSize="15sp" />

                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/shape_bg_white_10"
                    android:orientation="vertical"
                    android:paddingBottom="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:drawableLeft="@drawable/shape_green_4_18_2"
                        android:drawablePadding="8dp"
                        android:text="第二步：请选择想吃的食物"
                        android:textColor="@color/black_2A"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="35dp"
                        android:layout_marginEnd="15dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:background="@drawable/diet_bing_with_green"
                                android:gravity="center"
                                android:layout_marginStart="1dp"
                                android:includeFontPadding="false" />

                            <TextView
                                android:id="@+id/tv_diet_custom_plan_breakfast"
                                style="@style/diet_change_diet_meal_title"
                                android:layout_marginLeft="4dp"
                                android:drawableRight="@drawable/circle_add_white"
                                android:text="@string/diet_change_diet_top_breakfast" />
                        </LinearLayout>


                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_diet_custom_plan_breakfast"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="100dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:src="@drawable/diet_jitui_with_green" />

                            <TextView
                                android:id="@+id/tv_diet_custom_plan_lunch"
                                style="@style/diet_change_diet_meal_title"
                                android:drawableRight="@drawable/circle_add_white"
                                android:text="@string/diet_change_diet_top_lunch" />
                        </LinearLayout>


                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_diet_custom_plan_lunch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:src="@drawable/diet_huacai_with_green" />

                            <TextView
                                android:id="@+id/tv_diet_custom_plan_dinner"
                                style="@style/diet_change_diet_meal_title"
                                android:drawableRight="@drawable/circle_add_white"
                                android:text="@string/diet_change_diet_top_dinner" />

                        </LinearLayout>


                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_diet_custom_plan_dinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/bottom_gradient_blue"
        android:gravity="center"
        android:text="一键生成"
        android:textColor="#FEFEFE"
        android:textSize="18sp"
        android:textStyle="bold" />

</FrameLayout>